<?xml version="1.0"?>
<package>
  <name>art_basic_control</name>
  <version>1.0.0</version>
  <description>The art_basic_control package</description>
  <maintainer email="ikapinus@fit.vutbr.cz">Michal Kapinus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslint</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_mannequin_mode</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_mannequin_mode</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  
  <test_depend>roslaunch</test_depend>

</package>
