<?xml version="1.0"?>
<package>
  <name>art_brain</name>
  <version>0.0.0</version>
  <description>The art_brain package</description>

  <maintainer email="ikapinus@todo.todo">ikapinus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>art_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>art_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>art_calibration</run_depend>
  <run_depend>art_db</run_depend>
  <run_depend>art_projected_gui</run_depend>
  <run_depend>art_arcode_detector</run_depend>
  <run_depend>art_simple_tracker</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  
  <test_depend>roslaunch</test_depend>

</package>
