<?xml version="1.0"?>
<package>
    <name>art_bringup</name>
    <version>0.0.0</version>
    <description>The art_bringup package</description>

    <maintainer email="imaterna@todo.todo">imaterna</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>roslaunch</test_depend>

    <build_depend>kinect2_bridge</build_depend>
    <build_depend>art_calibration</build_depend>
    <build_depend>art_db</build_depend>
    <build_depend>art_brain</build_depend>
    <build_depend>art_touch_driver</build_depend>
    <build_depend>art_arcode_detector</build_depend>
    <build_depend>art_projected_gui</build_depend>
    <build_depend>art_simple_tracker</build_depend>
    <build_depend>topic_tools</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>image_view</build_depend>

    <run_depend>kinect2_bridge</run_depend>
    <run_depend>art_calibration</run_depend>
    <run_depend>art_db</run_depend>
    <run_depend>art_brain</run_depend>
    <run_depend>art_touch_driver</run_depend>
    <run_depend>art_arcode_detector</run_depend>
    <run_depend>art_projected_gui</run_depend>
    <run_depend>art_simple_tracker</run_depend>
    <run_depend>topic_tools</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>image_view</run_depend>

</package>
