<?xml version="1.0"?>
<package format="2">
  <name>art_collision_env</name>
  <version>0.0.0</version>
  <description>The art_collision_env package</description>

  <maintainer email="imaterna@todo.todo">imaterna</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
