<?xml version="1.0"?>
<package>
  <name>art_db</name>
  <version>0.0.0</version>
  <description>The art_db package</description>

  <maintainer email="imaterna@fit.vutbr.cz">ZdenekM</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>art_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mongodb_store</build_depend>
  <run_depend>art_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>mongodb_store</run_depend>

</package>
