<?xml version="1.0"?>
<package>
  <name>art_dobot_arm</name>
  <version>0.0.0</version>
  <description>The art_dobot_arm package</description>

  <maintainer email="ikapinus@fit.vutbr.cz">Michal Kapinus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>art_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>art_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslint</run_depend>

  <test_depend>roslaunch</test_depend>

</package>