<?xml version="1.0"?>
<package>
    <name>art_fake_nodes</name>
    <version>0.0.0</version>
    <description>The art_fake_nodes package</description>

    <maintainer email="ikapinus@todo.todo">ikapinus</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>roslint</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>roslint</run_depend>

    <test_depend>roslaunch</test_depend>

</package>