<?xml version="1.0"?>
<package>
  <name>art_helpers</name>
  <version>0.0.0</version>
  <description>Common helpers for art_brain, art_projected_gui etc.</description>

  <maintainer email="zdenal@todo.todo">zdenal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>art_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>art_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <test_depend>rostest</test_depend>

</package>
