<?xml version="1.0"?>
<package format="2">
  <name>art_instructions</name>
  <version>0.0.0</version>
  <description>The art_instructions package</description>

  <maintainer email="zdenal@todo.todo">zdenal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>art_utils</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-qt-bindings</build_depend>
  <build_export_depend>art_utils</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>art_utils</exec_depend>
  <exec_depend>rospy</exec_depend>
  <run_depend>python-qt-bindings</run_depend>

</package>
