<?xml version="1.0"?>
<package>
  <name>art_keyword_spotting</name>
  <version>0.0.0</version>
  <description>The art_keyword_spotting package</description>

  <maintainer email="zdenal@todo.todo">zdenal</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
