<?xml version="1.0"?>
<package>
  <name>art_multi_leap</name>
  <version>0.0.0</version>
  <description>The art_multi_leap package</description>

  <maintainer email="imaterna@fit.vutbr.cz">ZdenekM</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
