<?xml version="1.0"?>
<package>
  <name>art_object_recognizer_msgs</name>
  <version>0.0.0</version>
  <description>The art_object_recognizer_msgs package</description>

  <maintainer email="iprivalov@fit.vutbr.cz">vprivalov</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
