<?xml version="1.0"?>
<package>
    <name>art_pr2</name>
    <version>0.0.0</version>
    <description>The art_pr2 package</description>

    <maintainer email="ikapinus@todo.todo">ikapinus</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>art_pr2_moveit_config</build_depend>
    <build_depend>rgbd_launch</build_depend>
    <build_depend>openni_launch</build_depend>
    <!--build_depend>pr2_bringup</build_depend-->
    <!--build_depend>openni_tracker</build_depend-->
    <build_depend>pr2_description</build_depend>
    <build_depend>art_pr2_grasping</build_depend>
    <build_depend>art_basic_control</build_depend>
    <build_depend>art_arcode_detector</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>art_pr2_moveit_config</run_depend>
    <run_depend>rgbd_launch</run_depend>
    <run_depend>openni_launch</run_depend>
    <!--run_depend>pr2_bringup</run_depend-->
    <!--run_depend>openni_tracker</run_depend-->
    <run_depend>pr2_description</run_depend>
    <run_depend>art_pr2_grasping</run_depend>
    <run_depend>art_basic_control</run_depend>
    <run_depend>art_arcode_detector</run_depend>

    <test_depend>roslaunch</test_depend>

</package>