<?xml version="1.0"?>
<package>
    <name>art_pr2_arm_navigation</name>
    <version>0.0.0</version>
    <description>The art_pr2_arm_navigation package</description>
    <maintainer email="ikapinus@todo.todo">ikapinus</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>art_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>pr2_moveit_config</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roslint</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>art_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>pr2_moveit_config</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roslint</run_depend>

</package>